﻿v 1.0.0 2021-02-07
- first release
v 1.0.1 2021-02-12
- created parent service for generic
- created custom service for netspeed
- new customer register removed from generic
v 1.0.2 2021-02-25
- updated db modules
- updated customer register modules
v 1.0.3 2021-03-08
- updated register modules
- updated telekom modules
v 1.0.4 2021-04-10
- review functions for documents
- remove SMSCode from "AddCard" function
- change variables from DateTime to string