@@ -9,10 +9,10 @@ using System.Web;
 namespace RadiusR.API.CustomerWebService.Responses.Payment
 {
     [DataContract]
-    public partial class CustomerServicePaymentTypeListResponse : BaseResponse<Dictionary<int,string>, SHA1>
+    public partial class CustomerServicePaymentTypeListResponse : BaseResponse<ValueNamePair[], SHA1>
     {
         public CustomerServicePaymentTypeListResponse(string passwordHash, BaseRequest<SHA1> baseRequest) : base(passwordHash, baseRequest) { }
         [DataMember]
-        public Dictionary<int, string> PaymentTypes { get { return Data; } set { Data = value; } }
+        public ValueNamePair[] PaymentTypes { get { return Data; } set { Data = value; } }
     }
 }
